tests/semantic_errors/andrei0_4.tl
require "ifj21"

function main()
    local id : string = 12
end

main()
